--- a/rulersguides.css
+++ b/rulersguides.css
@@ -14,7 +14,8 @@ html,body {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 9991;
+    /* z-index: 9991; */
+    z-index: 1;
     font-size: 0
 }
 
@@ -65,7 +66,7 @@ html,body {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 9990
+    /* z-index: 9990 */
 }
 
 .ruler .label {
@@ -79,16 +80,16 @@ html,body {
 
 .ruler.h {
     width: 3000px;
-    left: -1px;
+    left: 32px;
     padding-top: 14px;
     border-bottom: solid 1px #000
 }
 
 .ruler.v {
     height: 7000px;
-    top: -1px;
+    top: 32px;
     padding-left: 16px;
-    width: 25px;
+    width: 32px;
     border-right: solid 1px #000
 }
 
@@ -180,10 +181,10 @@ html,body {
 
 .menu-btn {
     position: fixed;
-    left: 3px;
-    top: 2px;
+    left: 114px;
+    top: 42px;
     line-height: 9px;
-    z-index: 9998;
+    /* z-index: 9998; */
     width: 20px;
     height: 20px;
     background-color: red;
@@ -198,13 +199,14 @@ html,body {
 
 .rg-menu {
     position: fixed;
-    top: 22px;
-    left: 3px;
+    top: 64px;
+    left: 114px;
     padding: 0;
     margin: 0;
     list-style: 0;
     display: none;
     font: 13px Arial;
+    /* z-index: 9999; */
     z-index: 9999;
     box-shadow: 2px 2px 10px #ccc
 }
@@ -242,7 +244,7 @@ html,body {
 .dialog {
     position: fixed;
     background-color: #777;
-    z-index: 9999;
+    /* z-index: 9999; */
     color: #fff;
     font-size: 13px;
     display: none;
@@ -350,4 +352,8 @@ html,body {
     font-size: 13px;
     *display: inline;
     zoom: 1
+}
+
+.ruler span {
+    box-sizing: content-box;
 }
